--- a/environment (1).yml
+++ b/environment (1).yml
@@ -1,7 +1,8 @@
-name: app_environment
-channels:
-  - snowflake
-dependencies:
-  - python=3.11.*
-  - snowflake-snowpark-python=
-  - streamlit=
+/Flexgen-PG3x
+├── streamlit_app.py          ← your main Streamlit UI logic
+├── environment.yml           ← dependencies (already correct)
+├── /templates
+│   ├── ems_proposal_template.pptx
+│   └── full_product_proposal_template.pptx
+├── /assets                   ← (optional) for logos, fonts, etc.
+└── /utils                    ← (optional) for helper Python functions
